# unfireable-safety-kernel

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.prod  Justfile  LICENSE  README.md  SECURITY.md  deny.toml  figures-correction-prompt.md  index.html  pytest.ini  rust-toolchain.toml  view.sh
.github/workflows/: ci.yml  publish-pypi.yml  release-image.yml  security.yml
agent/: audit-policy.toml
assets/: arya-tokens.css  figures.css
contracts/openapi/: safety_kernel.yaml
crates/adapters/safety_kernel_client/: Cargo.toml
crates/adapters/safety_kernel_client/src/: circuit_breaker.rs  client.rs  lib.rs  mtls.rs  reqwest_client.rs  token.rs  types.rs
crates/adapters/safety_kernel_client/tests/: adversarial.rs  ary1889_f7_live_equivalence.rs  boundary_check.rs  equivalence.rs  mtls_smoke.rs  purple_team_ary1883.rs  seed_af_key.rs  traceparent.rs
crates/adapters/safety_kernel_client/tests/purple/: adversarial_campaigns.rs  cert_pinning_bypass.rs
crates/adapters/safety_kernel_py/: Cargo.toml  README.md  pyproject.toml
crates/adapters/safety_kernel_py/python/safety_kernel_client/: __init__.py
crates/adapters/safety_kernel_py/src/: lib.rs
crates/adapters/transparency_store/: Cargo.toml
crates/adapters/transparency_store/migrations/: 0001_transparency_log.sql
crates/adapters/transparency_store/src/: lib.rs  memory.rs  postgres.rs
crates/domain/src/safety/: api_action_allowlist.rs  claims.rs  client_state.rs  episodic_chain.rs  mod.rs  token.rs
crates/domain/src/safety/token/: canonical.rs  mod.rs  sign.rs  tests.rs  verify.rs
crates/services/safety-kernel/: Cargo.toml
crates/services/safety-kernel-reconciler/: Cargo.toml
crates/services/safety-kernel-reconciler/src/: lib.rs  main.rs  reconciler.rs
crates/services/safety-kernel-reconciler/tests/: manifest_http.rs  purple_manifest_replay.rs
crates/services/safety-kernel/benches/: policy_authorize_p99.rs
crates/services/safety-kernel/scripts/: gen_dev_certs.sh
crates/services/safety-kernel/src/: auth.rs  dto.rs  key_backend.rs  lib.rs  main.rs  settings.rs  state.rs  tls.rs  transparency_client.rs
crates/services/safety-kernel/src/routes/: approvals.rs  authorize.rs  meta.rs  mod.rs
crates/services/safety-kernel/src/routes/policy/: audit_event.rs  authorize.rs  mod.rs  register.rs  status.rs
crates/services/safety-kernel/tests/: authorize_transparency_log.rs  gcp_key_backend_live.rs  key_backend_prod_guard.rs  policy_audit_chain_integrity.rs  policy_forged_event_fingerprint.rs  policy_real_decision_e2e.rs  policy_registry_bypass.rs  policy_replay_within_ttl.rs  policy_routes_auth.rs  policy_routes_charset.rs  policy_routes_scaffold.rs  policy_signature_forgery.rs  purple_tlog_malformed_response.rs  purple_tlog_wire.rs  seed_af_image.rs  smoke_e2e.rs  test_authorize_emits_ledger_leaf.rs  test_transparency_http_wiremock.rs  tls_smoke.rs
crates/services/safety-kernel/tests/perf/: __init__.py  _grade_perf.py  policy_authorize_e2e.py
crates/services/transparency-log/: Cargo.toml
crates/services/transparency-log/src/: auth.rs  dto.rs  error.rs  lib.rs  main.rs  router.rs  settings.rs  state.rs  tls.rs
crates/services/transparency-log/src/routes/: append.rs  consistency.rs  mod.rs  sth.rs  verify.rs  wave_session.rs
crates/services/transparency-log/tests/: full_round_trip.rs  integration_wave_session.rs  load_wave_session.rs  purple_forged_sth.rs  purple_idempotency_collision.rs  purple_tier2_unfireable.rs  purple_wave_session_concurrency.rs  test_adversarial_entry_deletion.rs  test_adversarial_fake_pass.rs  test_adversarial_forged_kernel_signature.rs  test_adversarial_payload_tampered_proof.rs  test_mtls_smoke.rs
deployment/: docker-compose.prod.yml
docs/: README.md  architecture.md
docs/api/: openapi.md
docs/deployment/: docker.md  key-management.md  smoke-test.md
docs/integration/: circuit-breaker.md  getting-started.md  nginx.md  python-fastapi.md  rust-axum.md
docs/release-gate/: af-taxonomy.md
docs/release-gate/audit-rfq/: README.md  bsi.md  ncc-group.md  trail-of-bits.md
docs/release-gate/qa/: closeout-ary-1886-gcp-key-backend.md  purple-team-ary-1886-gcp-key-backend.md  purple-team-report-ary-1887-ac1.md  test-report-ary-1886-gcp-key-backend.md  test-report-ary-1887-ac1.md  uat-report-ary-1886-1887.md
examples/middleware/: __init__.py  dispatch_hook.py  fastapi_safety_middleware.py  grpc_interceptor.py  handler_guard.py  nginx_policy.conf
examples/observability/: __init__.py  grafana_dashboard.json  kernel_call_metrics.py
examples/policy/: __init__.py  default_policy.py
examples/reference_app/: app.py  docker-compose.yml  pyproject.toml
examples/reference_app_rs/: Cargo.toml
examples/reference_app_rs/src/: main.rs
examples/reference_app_rs/tests/: end_to_end.rs
examples/testing/: __init__.py  adversarial_fixtures.py  mock_kernel.py
figures/: README.md
py-defense/: LICENSE  README.md  pyproject.toml
py-defense/safety_kernel_defense/: __init__.py  _wire.py  exceptions.py  install_audit_hook.py  subprocess_propagation.py
py-defense/safety_kernel_defense/tests/: _mock_kernel.py  conftest.py  test_install_audit_hook.py  test_subprocess_propagation.py  test_warm_stdlib_deps.py
scripts/: audit_adversarial_coverage.sh
src/: app.jsx  figures-architecture.jsx  figures-conceptual.jsx  figures-evaluation.jsx  figures-verification.jsx
tests/adversarial/: test_coverage_gate.sh
tests/adversarial/python/: af_image_seed.py  af_key_seed.py  af_reconciler_seed.py  af_tlog_seed.py
tests/adversarial/seed/: README.md  af_tee_DEFERRED.md
