# Rust workspace root for safety-kernel.
# Workspace layout (per agent/boundaries.toml — Jankurai reference profile):
# crates/domain/ — pure types and traits, NO I/O / network / clock / RNG
# crates/application/ — use cases that orchestrate the domain
# crates/adapters/ — HTTP / DB / queue clients (the only place I/O lives)
# crates/workers/ — background jobs and long-running processes
# crates/services/ — HTTP service binaries (axum routers, transport setup)
# Build: cargo build --workspace
# Test: cargo test --workspace
# Lint: cargo clippy --workspace --all-targets -- -D warnings
# Format: cargo fmt --all
[workspace]
resolver = "2"
members = [
 "crates/domain",
 "crates/application",
 "crates/adapters",
 "crates/adapters/safety_kernel_client",
 "crates/adapters/safety_kernel_middleware",
 "crates/adapters/safety_kernel_py",
 "crates/adapters/transparency_store",
 "crates/services/safety-kernel",
 "crates/services/safety-kernel-reconciler",
 "crates/services/transparency-log",
 "examples/reference_app_rs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/ARYA-Labs-PBC/safety-kernel"
authors = ["ARYA Labs <eng@aryalabs.io>"]

[workspace.dependencies]
# Promoted here once ≥2 crates pin the same version.
# - NO `jsonwebtoken` (custom compact form, not JWT).
# - NO `serde_json` `preserve_order`: byte stability via `BTreeMap`, not insertion order.
# - `tracing` / `tracing-subscriber` are NOT for the domain crate
# (forbidden by `agent/boundaries.toml`); service + adapters only.
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread",
 "macros",
 "net",
 "signal",
 "time",
 "io-util",
 "process",
 "fs",
 "sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["trace",
 "timeout",
 "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# PyO3 binding surface (safety_kernel_py). abi3-py310 → one wheel spans 3.10+.
# `extension-module` is enabled only by the wheel build (crate feature), never
# by default, so `cargo test`/`cargo check` still link libpython. Matches the
# arya-core-py pattern.
pyo3 = { version = "0.29", features = ["abi3-py310"] }
pythonize = "0.29"
ed25519-dalek = { version = "2", features = ["pkcs8",
 "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
uuid = { version = "1", features = ["v7",
 "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter",
 "fmt",
 "json"] }
bytes = "1"
# adapters only. `rustls-tls` (not native-tls) so we don't pull
# OpenSSL — matches the SK service's own TLS choice.
reqwest = { version = "0.12", default-features = false, features = ["json",
 "rustls-tls",
 "stream"] }
# : pinned at the workspace level so the
# transparency-log service and the future
# `crates/adapters/transparency_store/` agree on the version + feature
# set. `runtime-tokio` (NOT runtime-tokio-rustls / runtime-tokio-native-tls)
# — we connect to Postgres without TLS in dev and add the TLS layer at
# the adapter boundary if/when prod needs it. Explicitly no
# `aws-lc-rs` feature anywhere ( ban). `default-features = false`
# so we don't accidentally pull in the older v0.7 macro engine.
sqlx = { version = "0.9", default-features = false, features = ["postgres",
 "runtime-tokio",
 "macros",
 "chrono"] }

# async-trait for safety_kernel port traits (application crate).
async-trait = "0.1"

# serde-big-array for fixed-size byte arrays (transparency-log Merkle).
serde-big-array = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
# Faster iteration; debug info on. Trade-off: larger binaries (we don't ship dev).
debug = true
incremental = true
