# ARYA Labs — safety-kernel Python audit-hook reference
# Stdlib-only by design. NO httpx / requests / fastapi deps.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-kernel-defense"
version = "0.1.0"
description = "Layer-1 stdlib-only Python audit-hook defender for the Unfireable Safety Kernel"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "ARYA Labs PBC" },
]
keywords = ["safety-kernel", "audit-hook", "import-discipline", "PEP-578"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
# Stdlib-only. the architecture overview design §2 mandate — every additional
# dependency widens the bootstrap window the hook lives inside.
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "coverage[toml]>=7.0",
]

[project.urls]
Homepage = "https://github.com/ARYA-Labs-Public/unfireable-safety-kernel"
Repository = "https://github.com/ARYA-Labs-Public/unfireable-safety-kernel"
Documentation = "https://github.com/ARYA-Labs-Public/unfireable-safety-kernel/blob/main/py-defense/README.md"
Issues = "https://github.com/ARYA-Labs-Public/unfireable-safety-kernel/issues"
Changelog = "https://github.com/ARYA-Labs-Public/unfireable-safety-kernel/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["safety_kernel_defense*"]
# Ship the runtime package only; the test suite stays in the source tree
# (exercised by CI) but is excluded from the built wheel/sdist.
exclude = ["safety_kernel_defense.tests*"]

[tool.setuptools]
# LICENSE is vendored next to this pyproject (copied from the repo root) so it
# is bundled into the wheel/sdist metadata.
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["safety_kernel_defense/tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["safety_kernel_defense"]
omit = [
    "safety_kernel_defense/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# ≥95% target.
fail_under = 95

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# Tests intentionally use broad excepts, magic values, etc.
per-file-ignores = { "safety_kernel_defense/tests/*" = ["B017", "S101", "PLR2004"] }

[tool.ruff.format]
quote-style = "double"
