[project]
name = "qorch-safety-reference-app"
version = "0.1.0"
description = "  reference FastAPI app demonstrating Safety Kernel wiring."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "cryptography>=42",
    "prometheus-client>=0.20",
    # The two-line in-tree dependency. In a public repo cut
    # these become path-or-version deps on published wheels.
    # "qorch-safety-client @ file://../../packages/safety/client",
    # "qorch-domain @ file://../../packages/core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
