# crates/services/safety-kernel — Rust port of the Safety Kernel HTTP
# service ( /  ).
#
# W1 commit was the boot stub. W2 (this commit) wires the axum router,
# auth middleware, the 6 endpoints, and the Unix-socket policy IPC.
[package]
name = "qorch-safety-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust port of the safety-kernel HTTP service."

[[bin]]
name = "qorch-safety-kernel"
path = "src/main.rs"

[features]
# `test-seams`: enable header-based clock/nonce overrides so the
# equivalence harness can pin both impls to identical wall-clock and
# nonce values without spawning one binary process per fixture.
#
# The override is silently rejected (no override applied) when this
# feature is OFF — production builds (default features) do NOT honor
# `x-test-fixed-clock` / `x-test-fixed-nonce` headers.
test-seams = []

[dependencies]
qorch-domain = { path = "../../domain" }
qorch-application = { path = "../../application" }
qorch-adapters = { path = "../../adapters" }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

#  /  additions for W2:
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

#   Step 5 — outbound transparency-log client.
# `reqwest` for the HTTP POST (rustls feature set; NO native-tls, NO
# aws-lc-rs  `async-trait` for the
# dyn-compatible `TransparencyClient` vtable held by `AppState`.
# (`thiserror` is already pulled in by the workspace default deps
#  above; reused for `TransparencyError`.)
reqwest = { workspace = true }
async-trait = "0.1"

#  slice 2 — kernel-side regex pre-validation 
# RE2-style DFA engine, NO backtracking — `fancy-regex`, `pcre2`, `onig`
# are explicitly forbidden by the ADR. Pre-validation in the kernel
# guarantees that patterns reaching the Python sidecar are
# RE2-compatible (cross-language equivalence note in ).
regex = "1"

#   Step 3 — server-side rustls termination (
#  Addendum 2a §2). `tls-rustls-no-provider` so we control the
# crypto provider explicitly via `rustls`'s `ring` feature below —
# the default `tls-rustls` feature would pull `aws-lc-rs` which the
# ADR forbids in favor of `rustls::crypto::ring`. `axum-server` is
# crate-local for now (only this crate binds TLS); promote to the
# workspace pin if another service crate ever needs it.
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
# Explicit pin matching what reqwest already brings in transitively;
# the `ring` feature is the ADR's required crypto provider. `std` is
# the rustls default minus aws-lc-rs.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# PEM cert/key parsing utilities used by `RustlsConfig::from_pem_file`.
rustls-pemfile = "2"
# WebPkiClientVerifier lives here in 0.23.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }

[dev-dependencies]
# Smoke test harness (e2e: spawn Python sidecar + bind Rust binary +
# curl the endpoints). `reqwest` used in `tests/smoke_e2e.rs` AND in
# `benches/policy_authorize_p99.rs` (blocking client for criterion).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tempfile = "3"
rand_core = { workspace = true }
sha2 = { workspace = true }
#  Step 3 — `tests/tls_smoke.rs` self-signed cert generation.
#   /test wave — also used by `tests/test_transparency_mtls_smoke.rs`
# to drive a real mTLS handshake between the kernel client and an
# axum-server bound to a self-signed CA.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
#   /test wave — `tests/test_transparency_http_wiremock.rs`
# drives ReqwestTransparencyClient against a real HTTP mock so the
# status-code -> TransparencyError mapping is exercised end-to-end.
# Same version as the reconciler crate pin so the build graph dedups.
wiremock = "0.6"
# In-process router exercise ( slice 1 scaffold tests). `tower`
# brings `ServiceExt::oneshot` for firing requests at the router without
# binding a socket; `http-body-util` collects response bodies.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
#  slice 5 §3.2: criterion microbench for `POST /policy/module/authorize`.
# Informational only — the gating p99 number is the pytest-benchmark
# e2e harness at `tests/perf/policy_authorize_e2e.py`. `harness = false`
# on the `[[bench]]` entry below tells cargo to defer to criterion's
# `criterion_main!` macro instead of the default libtest harness.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

#  slice 5 §3.2: criterion bench for `POST /policy/module/authorize`.
# `harness = false` -> criterion provides its own `main()`. Run via:
#   cargo bench -p qorch-safety-kernel --bench policy_authorize_p99 -- --quick
[[bench]]
name = "policy_authorize_p99"
harness = false

[lints.rust]
unused_imports = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
